# artifact-signer

./: .gitignore  .pre-commit-config.yaml  README.md  checkpoint.json  cyclonedx-sbom.json  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  scorecard.yml
python-artifact-signer/: README.md  pyproject.toml
python-artifact-signer/python_artifact_signer/: main.py
python-artifact-signer/tests/: test_checkpoint.py  test_consistency.py  test_debug.py  test_inclusion.py  test_log.py  test_verification.py
tests/: test_checkpoint.py  test_consistency.py  test_debug.py  test_inclusion.py  test_log.py  test_logentry.py  test_verification.py
