[tool.poetry]
name = "python-artifact-signer"
version = "0.5.0"
description = ""
authors = ["Zayaan Rahman <rahmanzayaan43@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
python-artifact-signer = "python_artifact_signer.main:main"

[tool.poetry.dependencies]
python = "^3.10"
astroid = "3.3.4"
bandit = "1.7.10"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cryptography = "43.0.1"
dill = "0.3.9"
idna = "3.10"
isort = "5.13.2"
markdown-it-py = "3.0.0"
mccabe = "0.7.0"
mdurl = "0.1.2"
mypy = "1.11.2"
mypy-extensions = "1.0.0"
pbr = "6.1.0"
platformdirs = "4.3.6"
pycparser = "2.22"
pygments = "2.18.0"
pylint = "3.3.1"
pyyaml = "6.0.2"
requests = "2.32.3"
rich = "13.9.1"
ruff = "0.6.8"
stevedore = "5.3.0"
tomli = "2.0.2"
tomlkit = "0.13.2"
types-requests = "2.32.0.20240914"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
jsonschema = "^4.23.0"
pytest-cov = "^6.0.0"
cyclonedx-bom = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"